// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the ProjectListItem component correctly for a user who has completed registration 1`] = `
<div
  className="box-layout"
>
  <div
    className="box-layout__box"
  >
    <h1
      className="box-layout__title"
    >
      KITC Operations Registration
    </h1>
    <p>
      You're all set - you can continue over in the 
      <a
        href="/dashboard"
      >
        Dashboard
      </a>
    </p>
  </div>
</div>
`;

exports[`should render the ProjectListItem component correctly for a user who has not been assigned any roles 1`] = `
<div
  className="box-layout"
>
  <div
    className="box-layout__box"
  >
    <h1
      className="box-layout__title"
    >
      KITC Operations Registration
    </h1>
    <p>
      Your registration is being reviewed by an administrator. You'll be notified by email when your account is activated.
    </p>
  </div>
</div>
`;

exports[`should render the ProjectListItem component correctly for a user who has not registered 1`] = `
<div
  className="box-layout"
>
  <div
    className="box-layout__box"
  >
    <h1
      className="box-layout__title"
    >
      KITC Operations Registration
    </h1>
    <div>
      <p>
        You can only use this app if you work for the KITC. If you do, great, hit register below!
      </p>
      <button
        className="button"
        onClick={[Function]}
      >
        Register
      </button>
    </div>
  </div>
</div>
`;
